--- a/Html/index.html
+++ b/Html/index.html
@@ -15,8 +15,8 @@
         <div class="nav-links">
             <ul class="first-ul">
                 <li><a href="#" class="home-link">Home</a></li>
-                <li><a href="#">Service</a></li>
-                <li><a href="#">feature</a></li>
+                <li><a href="./service.html" target="_blank">Service</a></li>
+                <li><a href="">feature</a></li>
                 <li><a href="#">Product</a></li>
                 <li><a href="#">Testimonial</a></li>
                 <li><a href="#">FAQ</a></li>
