I create a new html file with her new css unique file for features and in features html file i added the same navigation bar and also the same footer with the same styles and after in the main main section i add a div for the heading text and after this i create a section with class features when i create a div containe all features card and inside it i create another four div's represent the features boxes and this boxes have the same class but a different id and i give for him a lightgreen background color inside any boxes we have a simple icon explaine the content of this boxe and also a header with her caption and a small button

--- a/Html/index.html
+++ b/Html/index.html
@@ -15,8 +15,8 @@
         <div class="nav-links">
             <ul class="first-ul">
                 <li><a href="#" class="home-link">Home</a></li>
-                <li><a href="./service.html" target="_blank">Service</a></li>
-                <li><a href="">feature</a></li>
+                <li><a href="./service.html">Service</a></li>
+                <li><a href="./features.html">feature</a></li>
                 <li><a href="#">Product</a></li>
                 <li><a href="#">Testimonial</a></li>
                 <li><a href="#">FAQ</a></li>
@@ -230,7 +230,7 @@
                   </div>
                   <div class="customers-logos">
                       <figure>
-                          <img src="../Images/clientslogos.png" alt="">
+                          <img src="../Images/custo-2.png" alt="">
                       </figure>
                       <a href="#">Meet all customers -></a>
                   </div>
