--- a/Html/service.html
+++ b/Html/service.html
@@ -19,7 +19,7 @@
         <ul class="first-ul">
           <li><a href="./index.html" class="home-link">Home</a></li>
           <li><a href="#">Service</a></li>
-          <li><a href="#">feature</a></li>
+          <li><a href="./features.html">feature</a></li>
           <li><a href="#">Product</a></li>
           <li><a href="#">Testimonial</a></li>
           <li><a href="#">FAQ</a></li>
